# sira

./: .gitignore  Cargo.toml  LICENSE  TEST_VECTORS.md  config.rs  crypto.rs  index.html  lib.rs  main.rs  server.rs  test_vectors.rs  types.rs
.github/workflows/: ci.yml
docs/: _sidebar.md  api-reference.md  authentication.md  browser-client.md  concepts.md  configuration.md  index.md  install-packages.md  quickstart.md  security.md  server-node.md  server-python.md  server-rust.md  test-vectors.md  websocket.md
integration/: debug_send.py  run_all.sh  sira_test_client.py  test_cross_language.py  test_node.py  test_python.py  test_rust.py
sira-cli/: Cargo.toml
sira-cli/src/: main.rs  wire.rs
sira-node/: package-lock.json  package.json
sira-node/example/: echo.js
sira-node/src/: crypto.js  index.js  revocation.js  server.js  types.js
sira-node/tests/: roundtrip.test.js  vectors.test.js
sira-python/: pyproject.toml
sira-python/example/: echo_server.py
sira-python/sira/: __init__.py  config.py  crypto.py  server.py  types.py
sira-python/tests/: test_roundtrip.py  test_vectors.py
tests/: msgpack_python_compat.rs
