[package]
name = "sira"
version = "0.1.0"
edition = "2021"
description = "SIRA — Server state protocol. Reference implementation."
license = "MIT"
repository = "https://github.com/vaibhavsadgir50/sira"
homepage = "https://github.com/vaibhavsadgir50/sira"
documentation = "https://docs.rs/sira"
readme = "README.md"
keywords = ["websocket", "protocol", "state", "server", "realtime"]
categories = ["network-programming", "web-programming::websocket", "cryptography"]
exclude = ["index.html", "sira-js", ".github", "CONTRIBUTING.md", "TEST_VECTORS.md"]

[lib]
path = "lib.rs"

[[bin]]
name = "sira"
path = "main.rs"

[features]
default = []

[dependencies]
tokio = { version = "1", features = ["full"] }

axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
hyper = { version = "1", features = ["full"] }

x25519-dalek = { version = "2", features = ["static_secrets"] }
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
hkdf = "0.12"
base64 = "0.22"

rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

dashmap = "5"

tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1"
bytes = "1"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
