[package]
name = "sira-cli"
version = "0.1.0"
edition = "2021"
description = "SIRA CLI — test any SIRA server from terminal"
license = "MIT"
repository = "https://github.com/vaibhavsadgir50/sira"

[[bin]]
name = "sira-cli"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
reqwest = { version = "0.11", features = ["rustls-tls"] }
hex = "0.4"
