[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sira-python"
version = "0.1.0"
description = "SIRA Python server implementation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["sira", "websocket", "protocol", "encryption", "state"]
dependencies = [
    "cryptography>=41.0",
    "msgpack>=1.0",
    "websockets>=12.0",
    "starlette>=0.37",
    "uvicorn[standard]>=0.27",
]

[project.urls]
Repository = "https://github.com/vaibhavsadgir50/sira"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27"]

[tool.hatch.build.targets.wheel]
packages = ["sira"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
